[package]
name = "calander"
version = "0.2.0"
edition = "2021"
authors = ["youaremagic"]
license = "MIT"
description = "Calander for terminal"
repository = "https://github.com/youaremagic/calander"

[dependencies]
chrono = "0.4.24"
crossterm = "0.26.1"
clap = { version = "4.0", features = ["derive"] }
