[package]
name = "calander"
version = "0.3.0"
edition = "2021"
authors = ["magicisyou"]
license = "MIT"
description = "Calander for terminal"
repository = "https://github.com/magicisyou/calander"

[dependencies]
chrono = "0.4.24"
crossterm = "0.26.1"
clap = { version = "4.0", features = ["derive"] }
